--- a/main.html
+++ b/main.html
@@ -7,6 +7,10 @@
 </head>
 
 <body>
+	 <div class="movie-container">
+        <img class="moviePic" src="movie-poster.jpg" alt="Movie Poster">
+        <p class="movieDetail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eget est in justo consectetur iaculis. Sed eu quam vel mauris dapibus eleifend.</p>
+    </div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
